--- a/src/css/float.css
+++ b/src/css/float.css
@@ -4,40 +4,50 @@ body {
     --textColor: #fff;
     --transparency: rgba(0,0,0,0);
     --defaultInputColor: #fff;
-    --inputColorSelected: #FFB600;
-    --gameFlairColor: #68C3E2;
+    --inputColorSelected: #ffb600;
+    --gameFlairColor: #68c3e2;
+    --cancelColor: #e90202;
+    --returnColor: #ffb600;
+    --checkAccent: #68c3e2;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 @media (prefers-color-scheme: light) {
     body {
-        --fieldsetColor: rgba(0,0,0,0);
         --bodyColor: #fff;
         --textColor: #000;
         --defaultInputColor: #000;
-        --transparency: rgba(0,0,0,0);
-        --inputColorSelected: #FFB600;
-        --gameFlairColor: #68C3E2;
+        --inputColorSelected: #ffb600;
+        --gameFlairColor: #68c3e2;
+        --checkAccent: #68c3e2;
     }
 }
 body.dark-mode {
-    --fieldsetColor: rgba(0,0,0,0);
     --bodyColor: #121212;
     --textColor: #fff;
-    --transparency: rgba(0,0,0,0);
     --defaultInputColor: #fff;
-    --inputColorSelected: #FFB600;
-    --gameFlairColor: #68C3E2;
+    --inputColorSelected: #ffb600;
+    --gameFlairColor: #68c3e2;
+    --checkAccent: #68c3e2;
 }
 body.light-mode {
-    --fieldsetColor: rgba(0,0,0,0);
     --bodyColor: #fff;
     --textColor: #000;
     --defaultInputColor: #000;
-    --transparency: rgba(0,0,0,0);
-    --inputColorSelected: #FFB600;
-    --gameFlairColor: #68C3E2;
+    --inputColorSelected: #ffb600;
+    --gameFlairColor: #68c3e2;
+    --checkAccent: #68c3e2;
+}
+body.gruvbox {
+    --bodyColor: #282828;
+    --textColor: #ebdbb2;
+    --defaultInputColor: #504945;
+    --inputColorSelected: #b8bb26;
+    --gameFlairColor: #d3869b;
+    --cancelColor: #cc241d;
+    --returnColor: #83a598;
+    --checkAccent: #fe8019;
 }
 @font-face {
     font-family: 'raleway-300';
@@ -138,6 +148,7 @@ label {
     -moz-transform: scale(2);
     -ms-transform: scale(2);
     transform: scale(2);
+    accent-color: var(---checkAccent) !important;
 }
 .smallerInput {
     min-width: 45% !important;
@@ -161,13 +172,30 @@ textarea:focus {
     outline: none;
     border-bottom: 1px solid var(--inputColorSelected);
 }
-input[type=checkbox]:checked,
-input[type=radio]:checked {
-    accent-color: var(--gameFlairColor) !important;
-}
 code {
     font-family:'SF Mono', SFMono-Regular, ui-monospace, Menlo, courier new, monospace;
 }
 label {
     font-weight: 700;
+}
+.uiButton {
+    border-radius: 0.5rem;
+    border-style: solid;
+    border-width: 0.875rem;
+    margin-top: 1rem;
+}
+.cancelButton {
+    color: #fff;
+    background-color: var(--cancelColor);
+    border-color: var(--cancelColor);
+}
+.returnButton {
+    color: #000;
+    background-color: var(--returnColor);
+    border-color: var(--returnColor);
+}
+.actionButton {
+    color: #000;
+    background-color: var(--gameFlairColor);
+    border-color: var(--gameFlairColor);
 }
