--- a/src/browse.ejs
+++ b/src/browse.ejs
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta charset="utf-8">
         <title>Browse Data - 766 Scouting</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta charset="UTF-8">
         <meta name="apple-mobile-web-app-capable" content="yes">
         <link rel="apple-touch-startup-image" href="public/launch.png">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
