--- a/src/detail.ejs
+++ b/src/detail.ejs
@@ -9,6 +9,7 @@
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
         <meta name="apple-mobile-web-app-title" content="Scouting">
         <link rel="manifest" href="/app.webmanifest" />
+        <meta name="theme-color" content="#121212" id="themeMeta">
         <link rel="stylesheet" href="css/float.min.css" type="text/css">
         <link rel="stylesheet" href="css/supplement.min.css" type="text/css">
         <meta name="mobile-web-app-capable" content="yes">
