--- a/src/css/table.css
+++ b/src/css/table.css
@@ -19,3 +19,24 @@ th {
 td:first-child, th:first-child {
     border-left: none;
 }
+
+.padded > td {
+    padding: 0 1rem 0 1rem;
+}
+
+.inlineInput {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items:end;
+}
+
+.inlineInput button {
+    margin-top: 0;
+    margin: 0.25rem;
+    border-width: 0.5rem;
+}
+
+.inlineInput input {
+    margin: 0.2rem;
+}
