--- a/src/css/float.css
+++ b/src/css/float.css
@@ -90,7 +90,7 @@ select {
     font-size: 16px;
     margin-top: 2vh;
 }
-input[type='text'] {
+input[type='text'], input[type='email'], input[type='password'] {
     border: none;
     background-color: var(--transparency);
     color: var(--textColor);
@@ -121,7 +121,7 @@ input[type='tel']:focus {
     outline: none;
     border-bottom: 2px solid var(--inputColorSelected);
 }
-input[type='text']:focus {
+input[type='text']:focus, input[type='email']:focus, input[type='password']:focus {
     background-color: var(--transparency);
     outline: none;
     border-bottom: 2px solid var(--inputColorSelected);
