--- a/src/css/float.css
+++ b/src/css/float.css
@@ -66,6 +66,7 @@ html {
 body {
     background-color: var(--bodyColor);
     color: var(--textColor);
+    width: 100vw;
 }
 fieldset {
     border: 0.15rem solid var(--fieldsetColor);
@@ -81,6 +82,7 @@ h1 {
 .container {
     justify-content: center;
     display: flex;
+    width: 100vw;
 }
 select {
     background-color: var(--transparency);
