--- a/src/css/float.css
+++ b/src/css/float.css
@@ -66,6 +66,8 @@ html {
 body {
     background-color: var(--bodyColor);
     color: var(--textColor);
+    width: 100vw;
+    margin: 0;
 }
 fieldset {
     border: 0.15rem solid var(--fieldsetColor);
@@ -81,6 +83,8 @@ h1 {
 .container {
     justify-content: center;
     display: flex;
+    width: 100vw;
+    max-width: 100%;
 }
 select {
     background-color: var(--transparency);
