fix ugly button

--- a/src/css/float.css
+++ b/src/css/float.css
@@ -208,7 +208,8 @@ label {
     border-color: var(--gameFlairColor);
 }
 .actionButton:disabled {
-    background-color: color-mix(in srgb, var(--gameFlairColor) 25%, var(--bodyColor));
+    background-color: color-mix(in srgb, var(--gameFlairColor) 15%, var(--bodyColor));
+    border-color: color-mix(in srgb, var(--gameFlairColor) 15%, var(--bodyColor));
 }
 form {
     width: 95%;
