--- a/src/css/blackjack.css
+++ b/src/css/blackjack.css
@@ -130,6 +130,6 @@
 }
 
 .gruvboxBlackjack {
-    background-image: url(../assets/gruvcards/honerkamp-bkg.jpeg);
+    background-image: url(/assets/gruvcards/honerkamp-bkg.jpeg);
     background-repeat: repeat-y;
 }
