--- a/static/public/css/main_form.css
+++ b/static/public/css/main_form.css
@@ -27,10 +27,14 @@
     min-width: 15vw;
     max-width: 70vw;
 }
+.time_button {
+    min-height: 30vh;
+}
 .cycle_button {
     align-self: center;
     color: #32d74b;
     min-width: 50vw;
+    min-height: 10vh;
 }
 .counter {
     color: #fff;
