--- a/static/public/css/main_form.css
+++ b/static/public/css/main_form.css
@@ -13,6 +13,13 @@
     border: none;
     border-radius: 0.25rem;
     padding: 0 0.75rem 0 0.75rem;
+    -webkit-touch-callout:none;
+    -webkit-user-select:none;
+    -khtml-user-select:none;
+    -moz-user-select:none;
+    -ms-user-select:none;
+    user-select:none;
+    -webkit-tap-highlight-color:rgba(0,0,0,0);
 }
 .continue_button:active, .time_button:active, .cycle_button:active {
     background-color: rgba(0, 0, 0, 0.45);
